--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ body {
   align-items: flex-start;
   row-gap: 0;
   padding: 0 2rem;
+  padding-bottom: 1rem;
   border-top-right-radius: 1rem;
   row-gap: 0.5rem;
   position: relative;
